# Programier-bung_2_Abschlussarbeit

./: LICENSE  README.md  Trainingstagebuch.pptx  addtrainingtodict.py  config.yaml  dbperson.json  dbtests.json  hilfsfunktionenedittraining.py  main.py  pyproject.toml  requirements.txt  test_import.py  testsupload.py  trainingsliste_alter_code.py  trytinydb.py  trytinydbtest.py  utils.py
Module/: Personenklasse.py  hilfsfunktionenedittraining.py
Person/: Personenklasse.py
Präsentation/: Trainingstagebuch.pptx
auswertungen/: create_power_curve.py  ekgdata.py  read_data.py  read_pandas.py  zu_benutzen_um_später_darauf_zuzugreifen.py
data/gpx/: Ride.gpx  UM_1_6__Tromso_Sherpatreppa_halb.gpx  UM_Molina_Wasserfall_Park.gpx
pages/: Profil.py  Test 1.py  Trainingsliste.py  add workout.py  add_profile.py  dashboard.py  person_anschauen.py  test_import.py
uploaded_files/: Mittagsrunde_Rennrad_fit_20250702182704.fit  Nachmittagsrunde_Rennrad_fit_20250702182606.fit  Radelfahren_gpx_20250629143956.gpx  Radfahren_fit_20250702183252.fit  Wandern_in_norwegen_gpx_20250702183346.gpx  Workout_2_gpx_20250629145134.gpx  cxyvcxv_fit_20250701171131.fit  cxyvcxv_gpx_20250701170905.gpx  testbild1_fit_20250702173040.fit
