[project]
name = "Programier-bung_2_Abschlussarbeit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jlmci", email = "lj9092@mci4me.at"},
    {name = "J4nickH", email = "ha1220@mci4me.at"},
]
dependencies = [
    "streamlit>=1.45.1",
    "plotly>=6.1.2",
    "pandas>=2.3.0",
    "tinyDB>=4.8.2",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
