[project]
name = "Programier-bung_2_Abschlussarbeit"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jlmci", email = "lj9092@mci4me.at"},
    {name = "J4nickH", email = "ha1220@mci4me.at"},
]
dependencies = [
    "streamlit>=1.45.1",
    "plotly>=6.1.2",
    "pandas>=2.3.0",
    "tinydb>=4.8.2",
    "streamlit-authenticator>=0.4.2",
    "bcrypt>=4.3.0",
    "gpxpy>=1.6.2",
    "folium>=0.20.0",
    "streamlit-folium>=0.25.0",
    "fitparse>=1.2.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
